--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,8 @@
     display: flex;
     flex-direction: row;
     font-family: sans-serif;
+    word-wrap: break-word;
+    word-break: break-word;
   }
 
   .left-container{
@@ -72,6 +74,8 @@
     border-left: 2px solid #000;
     flex-direction: column;
     border-bottom: 2px solid #000;
+    word-wrap: break-word;
+    word-break: break-word;
   }
   .middle-container{
     text-align: center;
@@ -102,20 +106,39 @@
     border-bottom: 3px solid #000;
     width: 100%;
     padding: 0px;
-    background-color: rgba(128, 128, 128, 0.479);
-
+    background-color: rgba(34, 10, 97, 0.479);
+    height: 8vh;
+    word-wrap: break-word;
+    word-break: break-word;
+    overflow: hidden;
   }
 
   .tasksContainer{
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
     align-items: center;
     text-align: center;
-    border-bottom: 3px solid #000;
     width: 100%;
     padding: 0px;
-    background-color: rgba(238, 45, 158, 0.479);
     overflow-y: auto;
+    height: 92vh;
   }
+  .taskMod{
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+    width: 100%;
+    border-bottom: 3px solid #000;
+    height: 8vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    word-wrap: break-word;
+    word-break: break-word;
+    overflow: hidden;
+    padding: 0;
+    }
 </style>
 
 <main>
@@ -127,7 +150,21 @@
       </div>
 
       <div class="tasksContainer">
-        he
+        <div *ngFor="let task of tasks; let i = index" class="taskMod">
+
+          <div style="width: 25%; box-sizing: border-box; padding: 0; height: 100%; border: 5px solid #000;">
+          <button (click)="completeTask(i)" style="background-color: rgb(34, 211, 34); width: 100%; height: 100%;"> Complete </button>
+          </div>
+
+          <div style="width: 50%; box-sizing: border-box; height: 100%; text-align: center; border: 5px solid #000;">
+          {{task}}
+          </div>
+
+          <div style="width: 25%; box-sizing: border-box; height: 100%; padding: 0; border: 5px solid #000;">
+          <button (click)="deleteTask(i)" style="background-color: rgb(206, 11, 11); width: 100%; height: 100%;"> Delete </button>
+          </div>
+
+        </div>
       </div>
     </div>
     
@@ -172,11 +209,4 @@
     </div>
   </div>
 </main>
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<router-outlet />
+<router-outlet></router-outlet>
