--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,6 +139,27 @@
     overflow: hidden;
     padding: 0;
     }
+    .completeBox{
+      width: 25%; 
+      box-sizing: border-box; 
+      padding: 0; 
+      height: 100%; 
+      border: 1px solid #000; 
+      border-top: 0
+    }
+    .desBox{
+      display: flex; 
+      flex-direction: column; 
+      width: 50%; 
+      box-sizing: border-box; 
+      height: 100%;
+      justify-content: center; 
+      align-items: center; 
+      text-align: center; 
+      border: 1px solid #000; 
+      border-top: 0;
+    }
+    
 </style>
 
 <main>
@@ -152,15 +173,15 @@
       <div class="tasksContainer">
         <div *ngFor="let task of tasks; let i = index" class="taskMod">
 
-          <div style="width: 25%; box-sizing: border-box; padding: 0; height: 100%; border: 1px solid #000; border-top: 0">
+          <div class="completeBox">
           <button (click)="completeTask(i)" style="background-color: rgb(34, 211, 34); width: 100%; height: 100%; border: 0"> Complete </button>
           </div>
 
-          <div style="display: flex; flex-direction: column; width: 50%; box-sizing: border-box; height: 100%;justify-content: center; align-items: center; text-align: center; border: 1px solid #000; border-top: 0;">
+          <div class="desBox">
           {{task}}
           </div>
 
-          <div style="width: 25%; box-sizing: border-box; height: 100%; padding: 0; border: 1px solid #000; border-top: 0">
+          <div class="completeBox">
           <button (click)="deleteTask(i)" style="background-color: rgb(206, 11, 11); width: 100%; height: 100%; border: 0"> Delete </button>
           </div>
 
