--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -173,11 +173,11 @@
     }
     .timeBox{
       width: 100%;
-      height: 20%; 
+      height: 10%; 
       box-sizing: border-box; 
       padding: 0;
-      border: 1px solid #000; 
-      border-top: 0
+      border: 0;
+      border-bottom: 2px solid #000; 
     }
     
 </style>
