--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,10 @@
 .pomo-button-wrapper {
     display: flex; 
     justify-content: center; 
-    gap: 0.5em; 
+    gap: 1.5em; 
+    flex-wrap: wrap;
+    width: 100%;
+    box-sizing: border-box;
   }
   
   .pomo-button {
@@ -49,5 +52,20 @@
   .pomo-display{
     color: black;
     font-weight: 800;
-    font-size: 50px;
+    font-size: clamp(20px, 5vw, 50px);
+    margin-bottom: 0.5em;
+    text-align: center;
+  }
+
+  @media screen and (max-width: 600px) {
+    .pomo-button-wrapper {
+      flex-direction: column; /* Stack buttons vertically */
+      align-items: center; /* Center-align the buttons */
+      gap: 0.5em; /* Reduce gap between buttons */
+    }
+  
+    .pomo-button {
+      width: 100%; /* Make buttons take the full width */
+      max-width: none; /* Remove any maximum width restriction */
+    }
   }
