--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,20 +52,20 @@
   .pomo-display{
     color: black;
     font-weight: 800;
-    font-size: clamp(20px, 5vw, 50px);
+    font-size: clamp(20px, 5vw, 50px);/*min font size, pref font size, max font size */
     margin-bottom: 0.5em;
     text-align: center;
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 650px) {
     .pomo-button-wrapper {
-      flex-direction: column; /* Stack buttons vertically */
-      align-items: center; /* Center-align the buttons */
-      gap: 0.5em; /* Reduce gap between buttons */
+        flex-direction: column; 
+        align-items: center; 
+        gap: 0.5em; 
     }
   
     .pomo-button {
-      width: 100%; /* Make buttons take the full width */
-      max-width: none; /* Remove any maximum width restriction */
+        width: 100%; 
+        max-width: none; 
     }
   }
