--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -191,7 +191,8 @@
       box-sizing: border-box; 
       padding: 0;
       border: 0;
-      border-bottom: 2px solid #000; 
+      border-bottom: 2px solid #000;
+      overflow: hidden; 
     }
 
     .checkmark-box{
