--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -185,6 +185,7 @@
       border: 1px solid #000; 
       border-top: 0;
     }
+    /* The container that will haave the time obtained though web API call */
     .timeBox{
       width: 100%;
       height: 10%; 
@@ -195,6 +196,7 @@
       overflow: hidden; 
     }
 
+    /* The container used for the checkmark box of a task */
     .checkmark-box{
       background-color:#28a745; 
       width: 100%; 
@@ -291,20 +293,8 @@
     <br>
     
     
-    <!-- <h2>&lt;----- Any tasks that you have are located to the left</h2>
-    <br>
-    
-    
-    <h2>If you want to start a Pomodoro session. Click the button to the right -----&gt;</h2>
-    <br> -->
-    
-    
     <h2 class="text-task">
       Click the button below to add a task.
-    <!-- <br>|
-    <br>|
-    <br>|
-    <br>v -->
     </h2>
 
     <button (click)="promptUser()" class="create-task"> Create a Task </button>
@@ -332,5 +322,6 @@
       </div>
     </div>
   </div>
+  
 </main>
 <router-outlet></router-outlet>
